<resources>
    <string name="name_app">Fitmax</string>
    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
    <string name="tfe_pe_tv_score">Score: %.2f</string>
    <string name="tfe_pe_tv_model">Model: </string>
    <string name="tfe_pe_tv_fps">Fps: %d</string>
    <string name="tfe_pe_tv_device">Device: </string>
    <string name="tfe_pe_tv_classification_value">- %s</string>
    <string name="tfe_pe_tv_pose_classification">Pose Classification</string>
    <string name="tfe_pe_tv_tracking">Tracker: </string>
    <string name="tfe_pe_gpu_error">Movenet MultiPose does not support GPU. Fallback to CPU.</string>
    <string-array name="tfe_pe_models_array">
        <item>Movenet Lightning</item>
        <item>Movenet Thunder</item>
        <item>Movenet MultiPose</item>
        <item>Posenet</item>
    </string-array>

    <string-array name="tfe_pe_device_name">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="tfe_pe_tracker_array">
        <item>Off</item>
        <item>BoundingBox</item>
        <item>Keypoint</item>
    </string-array>
    <string name="title_activity_home_screen">HomeScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_bottom_tabs">BottomTabs</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!--    Bottom Tab-->
    <string name="bottom_tabs_home">Home</string>
    <string name="bottom_tabs_mission">Mission</string>
    <string name="bottom_tabs_equiptment">Equiptment</string>
    <string name="bottom_tabs_account">Account</string>
    <string name="title_activity_tabs">tabs</string>
    <string name="title_activity_bottom">bottom</string>
</resources>