<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:title="@string/bottom_tabs_home"
        android:icon="@drawable/ic_home_black_24dp"
        />
    <item
        android:id="@+id/navigation_mission"
        android:title="@string/bottom_tabs_mission"
        android:icon="@drawable/ic_baseline_auto_awesome_motion_24"/>
    <item
        android:id="@+id/navigation_equiptment"
        android:title="@string/bottom_tabs_equiptment"
        android:icon="@drawable/ic_baseline_snowshoeing_24"
       />
    <item
        android:id="@+id/navigation_profile"
        android:title="@string/bottom_tabs_account"
        android:icon="@drawable/ic_baseline_account_circle_24"/>
</menu>